# numbatalib

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  RELEASING.md  THIRD_PARTY_NOTICES.md  plan.md  port_checklist.csv  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.github/workflows_disabled/: publish.yml
articles/wechat/: numbatalib.md
numbatalib/: __init__.py  _registry.py  _third_party_notices.md  talib.py
numbatalib/_core/: _validation.py
numbatalib/_func/: _candles.py  _dmi_shared.py  ta_accbands.py  ta_acos.py  ta_ad.py  ta_add.py  ta_adosc.py  ta_adx.py  ta_adxr.py  ta_apo.py  ta_aroon.py  ta_aroonosc.py  ta_asin.py  ta_atan.py  ta_atr.py  ta_avgdev.py  ta_avgprice.py  ta_bbands.py  ta_beta.py  ta_bop.py  ta_cci.py  ta_cdl2crows.py  ta_cdl3blackcrows.py  ta_cdl3inside.py  ta_cdl3linestrike.py  ta_cdl3outside.py  ta_cdl3starsinsouth.py  ta_cdl3whitesoldiers.py  ta_cdlabandonedbaby.py  ta_cdladvanceblock.py  ta_cdlbelthold.py  ta_cdlbreakaway.py  ta_cdlclosingmarubozu.py  ta_cdlconcealbabyswall.py  ta_cdlcounterattack.py  ta_cdldarkcloudcover.py  ta_cdldoji.py  ta_cdldojistar.py  ta_cdldragonflydoji.py  ta_cdlengulfing.py  (+123 more)
numbatalib/_generated/: ta_func_meta.json
numbatalib/compat/: __init__.py
tests/: test_compat_talib_api.py  test_golden_parity.py  test_parity_vs_talib.py
tests/golden/: ACOS.npz  ADD.npz  ASIN.npz  ATAN.npz  ATR.npz  AVGPRICE.npz  (+41 more)
tools/: build_upstream_talib_ref.py  compare_vs_talib.py  compare_vs_upstream_c.py  generate_checklist.py  generate_golden.py  new_func.py  parity_harness.py  upstream_c_ref.py
(+4 files in other folders)
