[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numbatalib"
version = "0.1.0"
description = "TA-Lib reimplemented in pure Python + Numba."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ta-lib", "talib", "technical-analysis", "indicators", "numba"]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.23",
  "numba>=0.59",
]

[project.optional-dependencies]
dev = [
  "build>=1.0",
  "pytest>=7",
  "pytest-benchmark>=4",
  "twine>=5",
]

[tool.setuptools]
packages = [
  "numbatalib",
  "numbatalib._core",
  "numbatalib._func",
  "numbatalib._generated",
  "numbatalib.compat",
  "numbatalib.compat.talib",
]

[tool.setuptools.package-data]
numbatalib = ["_generated/*.json", "_third_party_notices.md"]
